<resources>
    <string name="app_name">My Edps Application</string>
    <string name="description_of_the_image">description_of_the_image</string>
    <string name="name">リスくん</string>
    <string name="リスくん" />
    <string name="決定">決定</string>
    <string name="名前のパートナーに名前をつけてあげよう">名前のパートナーに名前をつけてあげよう</string>

    <string name="具材を撮影してください" />
    <string name="注意">注意</string>
    <string name="具材全体が映るようにしてください">具材全体が映るようにしてください</string>
    <string name="具材以外は映らないようにしてください">具材以外は映らないようにしてください</string>
    <string name="料理">料理</string>
    <string name="作りたい料理を選択してください">作りたい料理を選択してください</string>
    <string name="料理手順">料理手順</string>
    <string name="料理を撮影してください">料理を撮影してください</string>
    <string name="料理全体が映るようにしてください">料理全体が映るようにしてください</string>
    <string name="料理以外は映らないようにしてください">料理以外は映らないようにしてください</string>
    <string name="料理の完成度は">料理の完成度は？</string>
    <string name="small">small</string>
    <string name="small2">small2</string>
    <string name="よくできました">よくできました！</string>
    <string name="パートナーに名前をつけてあげよう" />
    <string name="リスちゃん" />
    <string name="todo" />
    <string name="料理を始めよう" />
    <string name="home_button_description">ホームに戻る</string>
    <string name="risu">risu</string>
    <string name="baby2">baby2</string>
    <string name="ご飯を食べさせてあげよう">ご飯を食べさせてあげよう</string>
    <string name="完成料理">完成料理</string>
    <string name="パートナーに名前をつけてあげよう2">パートナーに名前をつけてあげよう</string>
    <string name="baby">baby2</string>
    <string name="リスちゃん2">リスちゃん</string>
    <string name="baby3">baby</string>
    <string name="食事中">食事中</string>
    <string name="残り時間">残り:10分</string>
    <string name="ご飯が終わったらお皿を片付けよう">ご飯が終わったらお皿を片付けよう！</string>
    <string name="back_button_description">back_button_description</string>
    <string name="にんじん">にんじん</string>
    <string name="レシピを検索">レシピを検索</string>
    <string name="todo2">TODO</string>
    <string name="メインの食材">メインの食材</string>
    <string name="料理を始めよう2">料理を始めよう</string>
    <string name="todo3">TODO</string>
    <string name="レシピ名1">レシピ名1</string>
    <string name="todo4">TODO</string>
    <string name="レシピ名2">レシピ名2</string>
    <string name="todo5">TODO</string>
    <string name="レシピ名3">レシピ名3</string>
    <string name="todo6">TODO</string>
    <string name="準備完了">準備完了</string>
</resources>
