<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/パートナーに名前をつけてあげよう2"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageViewCharacter"
        android:layout_width="343dp"
        android:layout_height="373dp"
        android:layout_below="@id/textViewPrompt"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:src="@drawable/baby2"
        android:contentDescription="@string/baby" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:layout_below="@id/imageViewCharacter"
        android:layout_marginTop="2dp"
        android:autofillHints=""
        android:hint="@string/リスちゃん2"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/決定"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="24dp" />

</RelativeLayout>
