<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="281dp"
        android:layout_height="295dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="66dp"
        android:contentDescription="@string/risu"
        android:src="@drawable/baby2" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/rectangle_2"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/rectangle_2"
        android:layout_alignTop="@id/rectangle_2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="リスくん" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rectangle_2"
        android:layout_marginStart="-176dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textViewName"
        android:elevation="5dp"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="10歳" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="666dp"
        android:layout_marginBottom="0dp"
        android:background="#E6F3F3F3"
        android:hapticFeedbackEnabled="true" />


    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="69dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="-1dp"
        android:contentDescription="@string/home_button_description"
        app:srcCompat="@drawable/cooking" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="13dp"
        android:text="料理を始めよう"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rectangle_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="21dp"
        android:text="@string/ご飯を食べさせてあげよう"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="145dp"
        android:layout_height="143dp"
        android:layout_below="@+id/character_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="131dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/完成料理" />


</RelativeLayout>