<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/preeatingrisu_image"
        android:layout_width="281dp"
        android:layout_height="295dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/risu"
        android:src="@drawable/preeatingrisu" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rectangle_2"
        android:layout_marginStart="-176dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textViewName"
        android:elevation="5dp"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="10歳" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="152dp"
        android:layout_height="73dp"
        android:layout_below="@+id/rectangle_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="109dp"
        android:text="@string/食事中"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rectangle_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="259dp"
        android:text="10歳"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="162dp"
        android:layout_height="72dp"
        android:layout_below="@+id/rectangle_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="238dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="11dp"
        android:text="リスくん"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/eatenDishImg"
        android:layout_width="145dp"
        android:layout_height="143dp"
        android:layout_below="@+id/character_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginTop="-126dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="182dp"
        android:contentDescription="@string/完成料理"
        app:srcCompat="@android:drawable/ic_menu_gallery" />


    <TextView
        android:id="@+id/eatTimer"
        android:layout_width="311dp"
        android:layout_height="168dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="543dp"
        android:layout_marginEnd="26dp"
        android:text="残り時間：10分"
        android:textSize="35sp" />


</RelativeLayout>